<resources>
    <string name="app_name">DH</string>

    <!-- label -->
    <string name="button_name_my_info">캐릭터 정보</string>
    <string name="button_name_search_items">아이템 검색</string>
    <string name="button_name_auction">경매장</string>
    <string name="button_name_change_character">캐릭터 전환</string>
    <string name="text_1st_slot">1번 슬롯</string>
    <string name="text_2nd_slot">2번 슬롯</string>
    <string name="button_name_close">닫기</string>
    <string name="button_name_search">아이템 검색</string>
    <string name="button_name_fame">명성 검색</string>
    <string name="button_name_timeline">타임라인</string>

    <string name="text_level_range">레벨 범위</string>
    <string name="edittext_hint_min_level">최소 레벨</string>
    <string name="edittext_hint_max_level">최대 레벨</string>
    
    <string name="text_word_type">검색 타입</string>
    <string name="text_word_type_front">시작하는 단어 검색</string>
    <string name="text_word_type_full">포함하는 단어 검색</string>
    <string name="text_word_type_match">동일한 단어 검색</string>

    <string name="text_rarity_grade">아이템 레어리티</string>
    <string name="text_rarity_uncommon">언커먼</string>
    <string name="text_rarity_common">커먼</string>
    <string name="text_rarity_rare">레어</string>
    <string name="text_rarity_unique">유니크</string>
    <string name="text_rarity_epic">에픽</string>
    <string name="text_rarity_cron">크로니클</string>
    <string name="text_rarity_legendary">레전더리</string>
    <string name="text_rarity_myth">신화</string>
    <string name="text_rarity_taecho">태초</string>
    <string name="text_rarity_all">모두</string>

    <string name="text_auction_item_count">수량</string>
    <string name="text_auction_item_current_price">즉시 구매가</string>
    <string name="text_auction_item_unit_price">개당 가격</string>
    <string name="text_auction_expire_time">마감 시간</string>
    <string name="text_auction_item_available_level">제한 레벨</string>
    <string name="text_auction_item_rarity">레어리티</string>
    <string name="text_auction_item_reinforce">강화</string>
    <string name="text_auction_item_refine">제련</string>
    <string name="text_auction_item_adventure_fame">모험가 명성</string>

    <string name="text_auction_item_align">정렬 방법</string>
    <string name="text_auction_item_align_price">가격별 정렬</string>
    <string name="text_auction_item_align_reinforce">등급별 정렬</string>
    <string name="text_auction_item_align_auction">등록순 정렬</string>
    <string name="text_auction_min_level">최소 레벨</string>
    <string name="text_auction_max_level">최대 레벨</string>

    <string name="text_auction_price_sort">정렬순서</string>
    <string name="text_auction_sort_desc">내림차순</string>
    <string name="text_auction_sort_asc">오름차순</string>

    <string name="button_name_setting_confirm">적용</string>

    <string name="menu_name_logout">로그아웃</string>
    <string name="menu_name_close">닫기</string>

    <string name="text_input_item_name_hint">아이템명을 입력하세요</string>

    <string name="error_msg_retry">다시 시도해 주십시오.</string>
    <string name="error_msg_no_result">결과가 없습니다.</string>
    <string name="error_msg_unexpected_null">알수없는 에러가 발생하였습니다.</string>
    <string name="error_msg_not_allow_black">빈 칸은 입력할 수 없습니다.</string>
    <string name="error_msg_system_check_msg">서버 점검 중입니다.</string>
    <string name="error_msg_not_connected_network">네트워크에 연결되지 않았습니다.</string>

    <string name="error_msg_no_buff_equip">장착된 버스스킬 장비가 없습니다.</string>
    <string name="error_msg_no_creature">장착된 크리처가 없습니다.</string>
    <string name="error_msg_no_flag">장착된 휘장이 없습니다.</string>
    <string name="error_msg_no_talisman">장착된 탈리스만이 없습니다.</string>
    <string name="error_msg_no_avatar">장착된 아바타가 없습니다.</string>

    <string name="error_msg_not_found_timeline">최근 타임라인 기록이 없습니다.</string>
    <string name="error_msg_not_found_item_record_in_day">이 날에는 아이템 획득 기록이 없습니다.</string>
    <string name="error_msg_not_found_search_result">검색결과가 없습니다.</string>

    <string name="alert_msg_not_impl_yet">아직 개발 중 입니다.</string>

    <string name="timeline_code_101">캐릭터 생성</string>
    <string name="timeline_code_102">캐릭터명 변경</string>
    <string name="timeline_code_103">캐릭터 전직</string>
    <string name="timeline_code_104">캐릭터 최고 레벨 달성</string>
    <string name="timeline_code_105">모험단명 변경</string>
    <string name="timeline_code_201">레이드</string>
    <string name="timeline_code_202">비탄의 탑 정복</string>
    <string name="timeline_code_203">절망의 탑 정복</string>
    <string name="timeline_code_204">(구)마수던전 토벌</string>
    <string name="timeline_code_205">제국투기장 하드모드 클리어</string>
    <string name="timeline_code_206">마수던전 토벌</string>
    <string name="timeline_code_207">핀드워 클리어</string>
    <string name="timeline_code_208">무덤의 탑 정복</string>
    <string name="timeline_code_209">레기온 클리어</string>
    <string name="timeline_code_301">결투장 경험치 등급 상승</string>
    <string name="timeline_code_401">아이템 강화</string>
    <string name="timeline_code_402">아이템 증폭</string>
    <string name="timeline_code_403">아이템 재련</string>
    <string name="timeline_code_404">아이템 개조</string>
    <string name="timeline_code_405">아이템 새김</string>
    <string name="timeline_code_406">아이템 계승</string>
    <string name="timeline_code_501">봉인된 자물쇠 아이템 획득</string>
    <string name="timeline_code_502">레전더리 획득</string>
    <string name="timeline_code_503">에컨 레전더리 획득</string>
    <string name="timeline_code_504">아이템 획득(항아리&amp;상자)</string>
    <string name="timeline_code_505">아이템 획득(던전 드랍)</string>
    <string name="timeline_code_506">아이템 획득(조각 교환)</string>
    <string name="timeline_code_507">아이템 획득(레이드)</string>
    <string name="timeline_code_508">아이템 획득(상점)</string>
    <string name="timeline_code_509">아이템 초월 전송(NPC)</string>
    <string name="timeline_code_510">아이템 교환</string>
    <string name="timeline_code_511">아이템 획득(업그레이드)</string>
    <string name="timeline_code_512">권능</string>
    <string name="timeline_code_513">아이템 획득(카드 보상)</string>
    <string name="timeline_code_514">아이템 획득(제작서)</string>
    <string name="timeline_code_515">아이템 초월 수령(NPC)</string>
    <string name="timeline_code_516">아이템 초월(초월의 돌)</string>
    <string name="timeline_code_517">아이템 융합 분리</string>
    <string name="timeline_code_518">특수 아이템 획득</string>
    <string name="timeline_code_519">아이템 변환</string>
    <string name="timeline_code_520">아이템 획득(장비 제작)</string>
    <string name="timeline_code_601">룬 획득</string>
    <string name="timeline_code_602">탈리스만 획득</string>
    
    <string name="timeline_get_item_dungeon">%s %s채널, %s 던전에서 %s 획득</string>
    <string name="timeline_get_item_dungeon_no_channel">%s 던전에서 %s 획득</string>
    <string name="timeline_get_item_pot">%s %s채널에서 %s 획득</string>
    <string name="timeline_get_legendary">%s 획득</string>
    <string name="timeline_item_succession">%s을 통하여 %s 획득</string>
    <string name="timeline_item_refine">%s의 %d 제련에 %s하였습니다</string>
    <string name="timeline_get_item_upgrade">%s 업그레이드</string>
    <string name="timeline_get_item_raid">레이드 클리어 보상으로 %s 을 획득</string>
    <string name="timeline_get_item_bongja">봉인된 자물쇠에서 %s 획득</string>

    <string name="timeline_max_level">캐릭터가 최고레벨에 도달하였습니다!</string>
    <string name="timeline_job_grown">%s로 전직하였습니다.</string>
    <string name="timeline_get_talisman">%s %s하여 %s을 획득하였습니다.</string>

    <string name="timeline_clear_region">레기온 [%s]을 클리어하였습니다.</string>
    <string name="timeline_clear_raid">레이드 [%s]을 클리어하였습니다.</string>

    <string name="tab_status">스탯</string>
    <string name="tab_equipment">장비</string>
    <string name="tab_avatar">아바타</string>
    <string name="tab_buff_equipment">버프스킬\n장비</string>
    <string name="tab_creature_and_gem">크리쳐\n휘장</string>
    <string name="tab_mist">안개 융화</string>
    <string name="tab_gem">휘장</string>
</resources>