<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_word_type"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30dp" />
        <RadioGroup
            android:id="@+id/rg_word_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp">
            <RadioButton
                android:id="@+id/rb_word_type_front"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_type_front"/>
            <RadioButton
                android:id="@+id/rb_word_type_full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_type_full"/>
            <RadioButton
                android:id="@+id/rb_word_type_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_word_type_match"/>
        </RadioGroup>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_level_range"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="20dp">
            <EditText
                android:id="@+id/edt_min_level"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_min_level"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="~"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" />

            <EditText
                android:id="@+id/edt_max_level"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_max_level"
                android:textAlignment="center" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_rarity_grade"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30dp" />
        <RadioGroup
            android:id="@+id/rg_rarity_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp" >
            <RadioButton
                android:id="@+id/rb_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:text="@string/text_rarity_common"/>
            <RadioButton
                android:id="@+id/rb_uncommon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#68D5ED"
                android:text="@string/text_rarity_uncommon" />
            <RadioButton
                android:id="@+id/rb_rare"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#B36BFF"
                android:text="@string/text_rarity_rare"/>
            <RadioButton
                android:id="@+id/rb_unique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF00FF"
                android:text="@string/text_rarity_unique"/>
            <RadioButton
                android:id="@+id/rb_epic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFB400"
                android:text="@string/text_rarity_epic"/>
            <RadioButton
                android:id="@+id/rb_cron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF6666"
                android:text="@string/text_rarity_cron"/>
            <RadioButton
                android:id="@+id/rb_legendary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF7800"
                android:text="@string/text_rarity_legendary"/>
            <RadioButton
                android:id="@+id/rb_myth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#46EA7A"
                android:text="@string/text_rarity_myth"/>
            <RadioButton
                android:id="@+id/rb_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="모두" />
        </RadioGroup>
        <Button
            android:id="@+id/btn_search_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/button_name_setting_confirm"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
