<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/main_background"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/ll_main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >
        <Button
            android:id="@+id/btn_go_my_info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_my_info" />

        <Button
            android:id="@+id/btn_go_search_items"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_search_items" />

        <Button
            android:id="@+id/btn_go_auction"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_auction" />

        <Button
            android:id="@+id/btn_go_change_character"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_change_character" />

        <Button
            android:id="@+id/btn_go_dictionary"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_dictionary" />

        <Button
            android:id="@+id/btn_go_timeline"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/button_name_timeline" />
    </LinearLayout>


</RelativeLayout>