<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_count"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_count"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_current_price"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_current_price"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_unit_price"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_unit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_unit_price"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_expire_time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_expire_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_expire_time"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_available_level"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_available_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_available_level"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_rarity"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_rarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_rarity"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_reinforce"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_reinforce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_reinforce"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_refine"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_refine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_refine"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auction_item_adventure_fame"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tv_auction_adventure_fame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/text_auction_item_adventure_fame"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RelativeLayout>

</LinearLayout>